# PyFlick

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-deploy.yml
pyflick/: __init__.py  authentication.py  const.py  types.py
src/: main.py
src/classes/api/: FlickApi.py
src/classes/util/: util.py
