[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFlick"
dynamic = ["version"]
description = "Python API For Flick Electric in New Zealand"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.6"
authors = [
    { name = "ZephireNZ", email = "brynley+pypi@zephire.nz" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.11.10",
    "json-api-doc>=0.15.0",
    "python-dateutil>=2.9.0.post0"
]

[project.urls]
Homepage = "https://github.com/ZephireNZ/PyFlick"

[tool.setuptools_scm]
local_scheme = "no-local-version"
